Model `jdk.internal.misc.Unsafe` to obtain sound results for `ConcurrentHashMap` (#201)